--- a/index.html
+++ b/index.html
@@ -61,21 +61,18 @@
             50% { background-position: 100% 50%; }
         }
 
-        .top-bar {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 25px;
-        }
-
+        /* Single Line Title */
         .app-title {
-            font-size: 24px;
+            font-size: 28px;
             font-weight: 700;
             background: linear-gradient(135deg, #38bdf8, #22c55e);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
+            text-align: center;
+            margin-bottom: 25px;
             animation: titlePulse 2s ease-in-out infinite;
+            line-height: 1.2;
         }
 
         @keyframes titlePulse {
@@ -83,46 +80,81 @@
             50% { opacity: 0.8; }
         }
 
-        .date-time {
-            text-align: right;
-            position: relative;
+        /* Live Weather Map Button */
+        .live-map-btn {
+            display: inline-flex;
+            align-items: center;
+            gap: 10px;
+            background: linear-gradient(135deg, #f59e0b, #f97316);
+            border: none;
+            border-radius: 50px;
+            padding: 12px 25px;
+            color: white;
+            font-weight: 600;
+            font-size: 15px;
+            cursor: pointer;
+            box-shadow: 0 5px 15px rgba(245, 158, 11, 0.3);
+            transition: all 0.3s ease;
+            text-decoration: none;
+            margin-bottom: 20px;
+            width: 100%;
+            justify-content: center;
+        }
+
+        .live-map-btn:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 8px 20px rgba(245, 158, 11, 0.4);
+        }
+
+        .live-map-btn i {
+            font-size: 16px;
+            animation: satelliteSpin 4s linear infinite;
+        }
+
+        @keyframes satelliteSpin {
+            from { transform: rotate(0deg); }
+            to { transform: rotate(360deg); }
+        }
+
+        /* Date & Time Display */
+        .datetime-container {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-bottom: 25px;
+            flex-wrap: wrap;
         }
 
         .date-display {
-            font-size: 16px;
+            font-size: 15px;
             font-weight: 600;
             color: #ffffff;
-            margin-bottom: 2px;
-            text-shadow: 0 2px 4px rgba(0,0,0,0.3);
-            animation: fadeIn 1s ease-out;
+            background: rgba(255, 255, 255, 0.05);
+            padding: 8px 15px;
+            border-radius: 20px;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            display: flex;
+            align-items: center;
+            gap: 8px;
         }
 
         .time-display {
-            font-size: 24px;
+            font-size: 15px;
             font-weight: 700;
             color: #38bdf8;
+            background: rgba(56, 189, 248, 0.1);
+            padding: 8px 15px;
+            border-radius: 20px;
+            border: 1px solid rgba(56, 189, 248, 0.2);
             font-family: 'Courier New', monospace;
-            text-shadow: 0 0 10px rgba(56, 189, 248, 0.3);
             display: flex;
             align-items: center;
-            gap: 5px;
-            animation: timeGlow 2s ease-in-out infinite alternate;
+            gap: 8px;
         }
 
-        @keyframes timeGlow {
-            from { text-shadow: 0 0 10px rgba(56, 189, 248, 0.3); }
-            to { text-shadow: 0 0 15px rgba(56, 189, 248, 0.6); }
-        }
-
-        .time-icon {
+        .time-display i {
             color: #22c55e;
-            font-size: 20px;
-            animation: iconSpin 5s linear infinite;
-        }
-
-        @keyframes iconSpin {
-            from { transform: rotate(0deg); }
-            to { transform: rotate(360deg); }
+            font-size: 14px;
         }
 
         /* Professional Search Bar */
@@ -582,6 +614,24 @@
                 border-radius: 20px;
             }
 
+            .app-title {
+                font-size: 24px;
+            }
+
+            .live-map-btn {
+                padding: 10px 20px;
+                font-size: 14px;
+            }
+
+            .datetime-container {
+                gap: 10px;
+            }
+
+            .date-display, .time-display {
+                font-size: 13px;
+                padding: 6px 12px;
+            }
+
             .temp {
                 font-size: 60px;
             }
@@ -597,14 +647,6 @@
 
             .meta-item {
                 min-width: 100%;
-            }
-
-            .date-display {
-                font-size: 14px;
-            }
-
-            .time-display {
-                font-size: 20px;
             }
 
             .detail-value {
@@ -630,15 +672,26 @@
 
     <!-- Weather Card -->
     <div class="card">
-        <!-- Header -->
-        <div class="top-bar">
-            <h1 class="app-title">🌤️ WeatherSphere Pro</h1>
-            <div class="date-time">
-                <div class="date-display" id="currentDate">Loading...</div>
-                <div class="time-display">
-                    <i class="fas fa-clock time-icon"></i>
-                    <span id="currentTime">--:--:--</span>
-                </div>
+        <!-- Single Line Title -->
+        <h1 class="app-title">🌤️ WeatherSphere Pro</h1>
+
+        <!-- Live Weather Map Button -->
+        <a href="https://zoom.earth/maps/satellite/#view=11.83,78.852,6z" 
+           target="_blank" 
+           class="live-map-btn">
+            <i class="fas fa-satellite"></i>
+            View Live Weather Map
+        </a>
+
+        <!-- Date & Time Display -->
+        <div class="datetime-container">
+            <div class="date-display">
+                <i class="fas fa-calendar"></i>
+                <span id="currentDate">Loading...</span>
+            </div>
+            <div class="time-display">
+                <i class="fas fa-clock"></i>
+                <span id="currentTime">--:--:--</span>
             </div>
         </div>
 
@@ -749,7 +802,6 @@
         const loadingDiv = document.getElementById('loading');
         const weatherDiv = document.getElementById('weather');
         const weatherBackground = document.getElementById('weatherBackground');
-        const dateTimeDiv = document.getElementById('dateTime');
         const currentDate = document.getElementById('currentDate');
         const currentTime = document.getElementById('currentTime');
 
@@ -802,9 +854,9 @@
             
             // Format date with more style
             const options = { 
-                weekday: 'long', 
+                weekday: 'short', 
                 year: 'numeric', 
-                month: 'long', 
+                month: 'short', 
                 day: 'numeric' 
             };
             currentDate.textContent = now.toLocaleDateString('en-US', options);
